Refactor code to use `ListValue.wrap(Stream)`
Simplifies code (improving readability) and unifies `Stream<Value>` to `ListValue` handling